tests/typing/good/testfile-variance-9.scala

class List[+T] { }
class Test { var x : List[Null] = null; var y : List[String] = x }
object Main { def main(args: Array[String]) { } }
