tests/typing/bad/testfile-variance-10.scala

class List[T] {}
class A[+T] { var x: List[T] = null }
object Main { def main(args: Array[String]) { } }
